# COS711_Assignment3

./: .gitignore  config.py  dataModule.py  dataset.py  labels_and_extents.csv  logistic_tuning_results.txt  main.py  model.py  pyproject.toml  regression_optimizer_tuning_results.txt  regression_training_results.txt  regression_tuning_results.txt  test_dataset.py  train.py
data/: drought_on_the_ground_s3_data_download.ipynb
logistics_regression/: logistics_regression_model.py  logistics_regression_module.py
